version of Maps. You can find the most up-do-date version at
http://mapping.referata.com/wiki/Maps/Version_history#Maps_change_log


=== Maps 0.7.7 ===
(2011-06-xx)

* Fixed minor initialization issue with the OpenLayers code.

* Fixed bug in OpenLayers layer dependency loading code.

* Removed dead code (initial code to support the RL, now used in SM 1.0 and later).

=== Maps 0.7.6 ===
(2011-03-21)

* Fixed fatal error occuring when running maintenance/refreshLinks.php

* Fixed not showing up of marker for Google Maps v2 when there is only one location.

* Fixed issue with the OpenLayers initialization code causing problems when doing a wiki upgrade via the web installer. 

=== Maps 0.7.5 ===
(2011-02-16)

* Fixed incorrect defaulting of geocoding service.

* Improved default width of maps.

=== Maps 0.7.4 ===
(2011-01-20)

* Added support for the auto-documentation features for parser hooks introduced in Validator 0.4.3.

* Improved KML formatter.

=== Maps 0.7.3 ===
(2010-11-30)

* Some internal improvements and translation updates.

* Fixed issue occuring when Maps is the only extension adding custom namespaces.

=== Maps 0.7.2 ===
(2010-10-28)

==== New features ====

* Added experimental support for KML layer definitions.

==== Internal improvements ====

* Extended the layer handling to support different types of layers, each of which can be supported by one or more mapping services.

==== Bug fixes ====

* Fixed incompatibility with MW 1.15.x.

* Fixed incorect parsing of certain DM and DMS coordinates.

* Fixed small layout issue with pop-ups in Google Maps.

* Fixed incorrect error on non-existing pages in the Layer namespace.

=== Maps 0.7.1 ===
(2010-10-20)

==== New features ====

* Image layers for OpenLayers maps, defined via pages in the Layer namespace.

==== Bug fixes ====

* Support for images without namespace prefix in the display points parser hook.

* Fixed layer oder for OpenLayers maps.

==== Internal improvements ====
